--- a/style.css
+++ b/style.css
@@ -36,10 +36,12 @@ section {
     padding-top: 1em;
 }
 
+
+
 .paragraph p {
     font-size: 18pt;
     font-weight: 500;
-    margin: 60px 170px;
+    margin: 180px 170px 180px 170px;
     max-width: 650px;
     line-height: 193%;
 }
@@ -51,28 +53,62 @@ p.bajada {
 }
 
 .btns {
-    margin: 20px 170px;
-    background-color: #FF910F; /* Green */
+    display: flex;
+    align-content: center;
+    justify-content: center;
+}
+.btn-1, .btn-2 {
+    padding: 1em 1em;
+    width: 440px;
+    height: 95px;
+    margin: 30px;
     border: none;
+    background-color: #FF910F;
+    font-family: 'Lato', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 30px;
     color: white;
-    padding: 20px 40px;
-    text-align: center;
-    display: inline-block;
-    font-size: 28px;
-    font-weight: 800;
+    font-weight: 600;
+    border-radius: 6px;
+    cursor: pointer;
 }
 
-.info-btn-1 {
-    text-decoration: none;
-    color: white;
-    font-family: 'Lato', sans-serif;
-    font-weight: 700;
-    margin: 2px 4px;
+#grad-1 {
+    background-color: #FF910F; /* For browsers that do not support gradients */
+    background-image: linear-gradient(#FF910F, #FFAD0F, #FFBB38);
 }
-.info-btn-2 {
-    text-decoration: none;
-    color: white;
-    font-family: 'Lato', sans-serif;
-    font-weight: 900;
-    margin: 2px 4px;
+#grad-2 {
+    background-color: #67AFBB;
+    background-image: linear-gradient(#67AFBB, #5DCCE4, #7DCEDC);
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+ul.contacto {
+    margin: 20px 170px;
+    font-size: 16pt;
+    line-height: 20pt;
+    font-weight: 500;
+}
+
+.logos {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+img {
+    height: 200px;
+    width: auto;
+}
+
+img.main {
+    height: 600px;
+    width: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
