--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ section {
     width: 100%;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;    
+    flex-direction: column;
     justify-content: flex-start;
 }
 
@@ -43,7 +43,12 @@ section {
     padding-bottom: 0em;
 }
 
-
+.text-span {
+  color: #FF910F;
+  font-size: 17pt;
+  font-style: italic;
+  font-weight: 700;
+}
 
 .paragraph p {
     font-size: 18pt;
@@ -281,7 +286,7 @@ img.img3 {
         width: auto;
     }
     img.descarga {
-        height: 380px;
+        height: 320px;
         width: auto;
     }
     img.img-side {
@@ -298,6 +303,55 @@ img.img3 {
     }
     img.img3 {
         height: 50px;
+        width: auto;
+    }
+  }
+
+  @media only screen and (max-width: 480px) {
+    .info h1 {
+        font-size: 30pt;
+        color: #FF910F;
+        font-weight: 600;
+        padding-bottom: 10px;
+    }
+    .info h2 {
+        font-size: 16pt;
+        color: black;
+        font-style: italic;
+        font-weight: 400;
+    }
+    .info p {
+        font-size: 8pt;
+        color: black;
+        font-weight: 400;
+        padding-top: 1em;
+        padding-bottom: 0em;
+    }
+    .text p {
+      font-size: 12pt;
+    }
+    .text-span {
+      font-size: 12pt;
+    }
+    .btn-1, .btn-2 {
+        width: 260px;
+        height: 75px;
+        font-size: 18px;
+    }
+    img.descarga {
+        height: 220px;
+        width: auto;
+    }
+    img.img2 {
+        height: 40px;
+        width: auto;
+    }
+    img.img1 {
+        height: 40px;
+        width: auto;
+    }
+    img.img3 {
+        height: 25px;
         width: auto;
     }
   }
