--- a/style.css
+++ b/style.css
@@ -43,11 +43,8 @@ section {
     padding-bottom: 0em;
 }
 
-.text-span {
-  color: #FF910F;
-  font-size: 17pt;
-  font-style: italic;
-  font-weight: 700;
+span .text-span {
+
 }
 
 .paragraph p {
@@ -342,6 +339,10 @@ img.img3 {
         height: 220px;
         width: auto;
     }
+    img.img-side {
+        height: 320px;
+        width: auto;
+    }
     img.img2 {
         height: 40px;
         width: auto;
@@ -352,6 +353,34 @@ img.img3 {
     }
     img.img3 {
         height: 25px;
+        width: auto;
+    }
+    .info {
+        text-align: left;
+        margin: 40px 50px;
+    }
+  }
+  @media only screen and (max-width: 345px) {
+    .info h1 {
+        font-size: 24pt;
+    }
+    img.main {
+        display: none;
+    }
+    .text p {
+      margin-top: 2em;
+    }
+    .btn-1, .btn-2 {
+        width: 160px;
+        height: 65px;
+        font-size: 12px;
+    }
+    img.descarga {
+        height: 180px;
+        width: auto;
+    }
+    img.img-side {
+        height: 260px;
         width: auto;
     }
   }
