ajustes de diseño y accesibilidad

--- a/style.css
+++ b/style.css
@@ -1,386 +1,1 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Lora', serif;
-}
-
-section {
-    position: relative;
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-}
-
-.paragraph {
-    display: flex;
-    flex-direction: row;
-}
-
-.info {
-    text-align: center;
-    margin: 40px 100px;
-}
-.info h1 {
-    font-size: 56pt;
-    color: #FF910F;
-    font-weight: 600;
-    padding-bottom: 10px;
-}
-.info h2 {
-    font-size: 24pt;
-    color: black;
-    font-style: italic;
-    font-weight: 400;
-}
-.info p {
-    font-size: 14pt;
-    color: black;
-    font-weight: 400;
-    padding-top: 1em;
-    padding-bottom: 0em;
-}
-
-span .text-span {
-
-}
-
-.paragraph p {
-    font-size: 18pt;
-    font-weight: 500;
-    margin: 120px 170px 120px 170px;
-    max-width: 650px;
-    line-height: 193%;
-}
-
-p.bajada {
-    font-size: 16pt;
-    font-weight: 500;
-    max-width: 1100px;
-    margin: 100px 170px 100px 170px;
-}
-
-.btns {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
-    justify-content: center;
-}
-.btn-1, .btn-2 {
-    padding: 1em 1em;
-    width: 440px;
-    height: 95px;
-    margin: 30px;
-    border: none;
-    background-color: #FF910F;
-    font-family: 'Lato', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    color: white;
-    font-weight: 600;
-    border-radius: 6px;
-    cursor: pointer;
-}
-
-#grad-1 {
-    background-color: #FF910F; /* For browsers that do not support gradients */
-    background-image: linear-gradient(#FF910F, #FFAD0F, #FFBB38);
-}
-#grad-2 {
-    background-color: #67AFBB;
-    background-image: linear-gradient(#67AFBB, #5DCCE4, #7DCEDC);
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-ul.contacto {
-    margin: 10px 170px;
-    font-size: 16pt;
-    line-height: 20pt;
-    font-weight: 500;
-}
-
-.logos {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    margin-top: 70px;
-    margin-bottom: 30px;
-}
-img {
-    height: 200px;
-    width: auto;
-}
-
-img.main {
-    height: 400px;
-    width: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-img.descarga {
-    height: 480px;
-    width: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-img.img-side {
-    height: 500px;
-    width: auto;
-    padding: 0px 0px;
-    margin-top: 80px;
-}
-
-img.img2 {
-    height: 120px;
-    width: auto;
-}
-img.img1 {
-    height: 120px;
-    width: auto;
-}
-img.img3 {
-    height: 100px;
-    width: auto;
-}
-
-
-@media only screen and (min-width: 1920px) {
-    img.main {
-        height: 700px;
-        width: auto;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    .paragraph {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-    img.img-side {
-        padding-bottom: 5em;
-        margin-top: 0px;
-    }
-    .btns {
-        flex-direction: column;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-  }
-
-  @media only screen and (max-width: 920px) {
-    .info h1 {
-        font-size: 46pt;
-        color: #FF910F;
-        font-weight: 600;
-        padding-bottom: 10px;
-    }
-    .info h2 {
-        font-size: 20pt;
-        color: black;
-        font-style: italic;
-        font-weight: 400;
-    }
-    .info p {
-        font-size: 12pt;
-        color: black;
-        font-weight: 400;
-        padding-top: 1em;
-        padding-bottom: 0em;
-    }
-    img.main {
-        height: 360px;
-        width: auto;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    img.img2 {
-        height: 90px;
-        width: auto;
-    }
-    img.img1 {
-        height: 90px;
-        width: auto;
-    }
-    img.img3 {
-        height: 80px;
-        width: auto;
-    }
-    ul.contacto {
-        margin: 10px 170px;
-        font-size: 14pt;
-        line-height: 20pt;
-        font-weight: 500;
-    }
-    p.bajada {
-        font-size: 14pt;
-        font-weight: 500;
-        max-width: 1100px;
-        margin: 100px 170px 100px 170px;
-    }
-  }
-
-  @media only screen and (max-width: 738px) {
-    .paragraph p {
-        font-size: 18pt;
-        font-weight: 500;
-        margin: 120px 70px 120px 70px;
-        max-width: 650px;
-        line-height: 193%;
-    }
-    ul.contacto {
-        margin: 30px 70px;
-    }
-    p.bajada {
-        margin: 30px 70px 30px 70px;
-    }
-    .paragraph p {
-        margin: 120px 70px 60px 70px;
-        max-width: 100%;
-    }
-    img.main {
-        height: 280px;
-        width: auto;
-    }
-  }
-
-  @media only screen and (max-width: 538px) {
-    .info h1 {
-        font-size: 36pt;
-        color: #FF910F;
-        font-weight: 600;
-        padding-bottom: 10px;
-    }
-    .info h2 {
-        font-size: 18pt;
-        color: black;
-        font-style: italic;
-        font-weight: 400;
-    }
-    .info p {
-        font-size: 10pt;
-        color: black;
-        font-weight: 400;
-        padding-top: 1em;
-        padding-bottom: 0em;
-    }
-    img.main {
-        height: 200px;
-        width: auto;
-    }
-    img.descarga {
-        height: 320px;
-        width: auto;
-    }
-    img.img-side {
-        height: 400px;
-        width: auto;
-    }
-    img.img2 {
-        height: 60px;
-        width: auto;
-    }
-    img.img1 {
-        height: 60px;
-        width: auto;
-    }
-    img.img3 {
-        height: 50px;
-        width: auto;
-    }
-  }
-
-  @media only screen and (max-width: 480px) {
-    .info h1 {
-        font-size: 30pt;
-        color: #FF910F;
-        font-weight: 600;
-        padding-bottom: 10px;
-    }
-    .info h2 {
-        font-size: 16pt;
-        color: black;
-        font-style: italic;
-        font-weight: 400;
-    }
-    .info p {
-        font-size: 8pt;
-        color: black;
-        font-weight: 400;
-        padding-top: 1em;
-        padding-bottom: 0em;
-    }
-    .text p {
-      font-size: 12pt;
-    }
-    .text-span {
-      font-size: 12pt;
-    }
-    .btn-1, .btn-2 {
-        width: 260px;
-        height: 75px;
-        font-size: 18px;
-    }
-    img.descarga {
-        height: 220px;
-        width: auto;
-    }
-    img.img-side {
-        height: 320px;
-        width: auto;
-    }
-    img.img2 {
-        height: 40px;
-        width: auto;
-    }
-    img.img1 {
-        height: 40px;
-        width: auto;
-    }
-    img.img3 {
-        height: 25px;
-        width: auto;
-    }
-    .info {
-        text-align: left;
-        margin: 40px 50px;
-    }
-  }
-  @media only screen and (max-width: 345px) {
-    .info h1 {
-        font-size: 24pt;
-    }
-    img.main {
-        display: none;
-    }
-    .text p {
-      margin-top: 2em;
-    }
-    .btn-1, .btn-2 {
-        width: 160px;
-        height: 65px;
-        font-size: 12px;
-    }
-    img.descarga {
-        height: 180px;
-        width: auto;
-    }
-    img.img-side {
-        height: 260px;
-        width: auto;
-    }
-  }
+*{margin:0;padding:0;box-sizing:border-box;font-family:"Lora",serif}body{max-width:1000px;margin:0 auto}img{width:100%;height:auto}em{color:#ff910f;font-style:italic;font-weight:700}header{margin:3em;text-align:center}header h1{font-size:3.8em;color:#ff910f;font-weight:600}header h2{font-size:2em;font-weight:400;font-style:italic;line-height:1.4em;margin:1ex}header ul{margin:0 3em}header ul li{list-style-type:none;display:inline-block;margin:0}header ul li::before{display:inline-block;position:relative;top:.3ex;margin:0;content:"·";color:#ff910f;font-size:1.9em;padding:.6ex .6ex .4ex .4ex;line-height:20%}header ul li:first-child::before{content:none}main{margin:3em}main .cols{display:grid;grid-template-columns:3fr 2fr;grid-column-gap:2em;margin:2em 0}main .cols p{font-size:1.5em;line-height:170%}main .cols img{margin:0 auto;height:auto}main h3{font-size:2em}main .ilust{padding:2em 25%}main p{font-size:1.4em}main ul.ficha{padding:2em;margin-top:2em;display:inline-block;border-radius:1ex;background-color:#ffecd6}main ul.ficha li{list-style-type:none}select{display:block;font-size:1.5em;font-weight:400;color:#444;line-height:1.3;padding:.6em 1.4em .5em .8em;width:80%;max-width:100%;box-sizing:border-box;margin:1ex 0;border:1px solid #aaa;box-shadow:0 1px 0 1px rgba(0,0,0,.04);border-radius:.5em;-moz-appearance:none;-webkit-appearance:none;appearance:none;background-color:#fff;background-image:url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);background-repeat:no-repeat,repeat;background-position:right .7em top 50%,0 0;background-size:.65em auto,100%}.select-css::-ms-expand{display:none}.select-css:hover{border-color:#888}.select-css:focus{border-color:#aaa;box-shadow:0 0 1px 3px #ff910f;box-shadow:0 0 0 3px -moz-mac-focusring;color:#222;outline:none}.select-css option{font-weight:normal}*[dir=rtl] .select-css,:root:lang(ar) .select-css,:root:lang(iw) .select-css{background-position:left .7em top 50%,0 0;padding:.6em .8em .5em 1.4em}.select-css:disabled,.select-css[aria-disabled=true]{color:graytext;background-image:url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%)}.select-css:disabled:hover,.select-css[aria-disabled=true]{border-color:#aaa}.box{position:relative;padding:3em;background:#fff;box-shadow:0 0 15px rgba(0,0,0,.1)}.ribbon{width:150px;height:150px;overflow:hidden;position:absolute}.ribbon::before,.ribbon::after{position:absolute;z-index:-1;content:"";display:block;border:5px solid #db7700}.ribbon span{position:absolute;display:block;width:225px;padding:15px 0;background-color:#ff910f;box-shadow:0 5px 10px rgba(0,0,0,.1);color:#fff;font:700 18px/1 "Lato",sans-serif;text-shadow:0 1px 1px rgba(0,0,0,.2);text-transform:uppercase;text-align:center}.ribbon-top-right{top:-10px;right:-10px}.ribbon-top-right::before,.ribbon-top-right::after{border-top-color:transparent;border-right-color:transparent}.ribbon-top-right::before{top:0;left:0}.ribbon-top-right::after{bottom:0;right:0}.ribbon-top-right span{left:-25px;top:30px;transform:rotate(45deg)}footer{display:grid;grid-template-columns:1fr 1fr 1fr;grid-column-gap:2em;padding-bottom:7em}footer a{text-align:center}footer a img{filter:saturate(0%);height:100px;width:auto}footer a:hover img{filter:saturate(100%)}@media only screen and (max-width: 700px){header{margin:1.5em}header h1{font-size:3em}header h2{font-size:1.4em}header p{font-size:.7em}h3{font-size:1em}.cover{padding:1ex 5ex}select{width:100%}main .cols{display:block}main .cols p{font-size:1.1em}main .cols img{text-align:center;margin:0 auto;padding:3em}footer{display:flex;width:100%;flex-direction:column}footer img{margin:2em 0}}
