--- a/style.css
+++ b/style.css
@@ -1,1 +1,354 @@
-*{margin:0;padding:0;box-sizing:border-box;font-family:"Lora",serif}body{max-width:1000px;margin:0 auto}img{width:100%;height:auto}em{color:#ff910f;font-style:italic;font-weight:700}header{margin:3em;text-align:center}header h1{font-size:3.8em;color:#ff910f;font-weight:600}header h2{font-size:2em;font-weight:400;font-style:italic;line-height:1.4em;margin:1ex}header ul{margin:0 3em}header ul li{list-style-type:none;display:inline-block;margin:0}header ul li::before{display:inline-block;position:relative;top:.3ex;margin:0;content:"·";color:#ff910f;font-size:1.9em;padding:.6ex .6ex .4ex .4ex;line-height:20%}header ul li:first-child::before{content:none}main{margin:3em}main .cols{display:grid;grid-template-columns:3fr 2fr;grid-column-gap:2em;margin:2em 0}main .cols p{font-size:1.5em;line-height:170%}main .cols img{margin:0 auto;height:auto}main h3{font-size:2em}main .ilust{padding:2em 25%}main p{font-size:1.4em}main ul.ficha{padding:2em;margin-top:2em;display:inline-block;border-radius:1ex;background-color:#ffecd6}main ul.ficha li{list-style-type:none}select{display:block;font-size:1.5em;font-weight:400;color:#444;line-height:1.3;padding:.6em 1.4em .5em .8em;width:80%;max-width:100%;box-sizing:border-box;margin:1ex 0;border:1px solid #aaa;box-shadow:0 1px 0 1px rgba(0,0,0,.04);border-radius:.5em;-moz-appearance:none;-webkit-appearance:none;appearance:none;background-color:#fff;background-image:url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);background-repeat:no-repeat,repeat;background-position:right .7em top 50%,0 0;background-size:.65em auto,100%}.select-css::-ms-expand{display:none}.select-css:hover{border-color:#888}.select-css:focus{border-color:#aaa;box-shadow:0 0 1px 3px #ff910f;box-shadow:0 0 0 3px -moz-mac-focusring;color:#222;outline:none}.select-css option{font-weight:normal}*[dir=rtl] .select-css,:root:lang(ar) .select-css,:root:lang(iw) .select-css{background-position:left .7em top 50%,0 0;padding:.6em .8em .5em 1.4em}.select-css:disabled,.select-css[aria-disabled=true]{color:graytext;background-image:url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"),linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%)}.select-css:disabled:hover,.select-css[aria-disabled=true]{border-color:#aaa}.box{position:relative;padding:3em;background:#fff;box-shadow:0 0 15px rgba(0,0,0,.1)}.ribbon{width:150px;height:150px;overflow:hidden;position:absolute}.ribbon::before,.ribbon::after{position:absolute;z-index:-1;content:"";display:block;border:5px solid #db7700}.ribbon span{position:absolute;display:block;width:225px;padding:15px 0;background-color:#ff910f;box-shadow:0 5px 10px rgba(0,0,0,.1);color:#fff;font:700 18px/1 "Lato",sans-serif;text-shadow:0 1px 1px rgba(0,0,0,.2);text-transform:uppercase;text-align:center}.ribbon-top-right{top:-10px;right:-10px}.ribbon-top-right::before,.ribbon-top-right::after{border-top-color:transparent;border-right-color:transparent}.ribbon-top-right::before{top:0;left:0}.ribbon-top-right::after{bottom:0;right:0}.ribbon-top-right span{left:-25px;top:30px;transform:rotate(45deg)}footer{display:grid;grid-template-columns:1fr 1fr 1fr;grid-column-gap:2em;padding-bottom:7em}footer a{text-align:center}footer a img{filter:saturate(0%);height:100px;width:auto}footer a:hover img{filter:saturate(100%)}@media only screen and (max-width: 700px){header{margin:1.5em}header h1{font-size:3em}header h2{font-size:1.4em}header p{font-size:.7em}.cover{padding:1ex 5ex}select{width:100%;font-size:16px}main h3{font-size:1.5em}main .cols{display:block}main .cols p{font-size:1.1em}main .cols img{text-align:center;margin:0 auto;padding:3em}main .ilust{padding:1em !important}footer{display:flex;width:100%;flex-direction:column}footer img{margin:2em 0}}
+@charset "UTF-8";
+/*
+
+ExE Expertos por Experiencia
+
+*/
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: 'Lora', serif;
+}
+
+body {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
+em {
+  color: #FF910F;
+  font-style: italic;
+  font-weight: 700;
+}
+
+header {
+  margin: 3em;
+  text-align: center;
+}
+
+header h1 {
+  font-size: 3.8em;
+  color: #FF910F;
+  font-weight: 600;
+}
+
+header h2 {
+  font-size: 2em;
+  font-weight: 400;
+  font-style: italic;
+  line-height: 1.4em;
+  margin: 1ex;
+}
+
+header ul {
+  margin: 0 3em;
+}
+
+header ul li {
+  list-style-type: none;
+  display: inline-block;
+  margin: 0;
+}
+
+header ul li::before {
+  display: inline-block;
+  position: relative;
+  top: .3ex;
+  margin: 0;
+  content: "·";
+  color: #FF910F;
+  font-size: 1.9em;
+  padding: 0.6ex 0.6ex 0.4ex 0.4ex;
+  line-height: 20%;
+}
+
+header ul li:first-child::before {
+  content: none;
+}
+
+main {
+  margin: 3em;
+}
+
+main .cols {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 2fr;
+      grid-template-columns: 3fr 2fr;
+  grid-column-gap: 2em;
+  margin: 2em 0;
+}
+
+main .cols p {
+  font-size: 1.5em;
+  line-height: 170%;
+}
+
+main .cols img {
+  margin: 0 auto;
+  height: auto;
+}
+
+main h3 {
+  font-size: 2em;
+}
+
+main .ilust {
+  padding: 2em 25%;
+}
+
+main p {
+  font-size: 1.4em;
+  line-height: 170%;
+}
+
+main p em {
+  color: #3d3a3d;
+  font-weight: 400;
+}
+
+main ul.ficha {
+  font-size: 1.2em;
+  line-height: 140%;
+  padding: 2em;
+  margin-top: 2em;
+  display: inline-block;
+  border-radius: 1ex;
+  background-color: #ffecd6;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+main ul.ficha li {
+  list-style-type: none;
+}
+
+select {
+  display: block;
+  font-size: 1.5em;
+  font-weight: 400;
+  color: #444;
+  line-height: 1.3;
+  padding: .6em 1.4em .5em .8em;
+  width: 80%;
+  max-width: 100%;
+  /* useful when width is set to anything other than 100% */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 1ex 0;
+  border: 1px solid #aaa;
+  -webkit-box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+          box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  border-radius: .5em;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e5e5e5));
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+  background-repeat: no-repeat, repeat;
+  /* arrow icon position (1em from the right, 50% vertical) , then gradient position*/
+  background-position: right .7em top 50%, 0 0;
+  /* icon size, then gradient */
+  background-size: .65em auto, 100%;
+}
+
+/* Hide arrow icon in IE browsers */
+.select-css::-ms-expand {
+  display: none;
+}
+
+/* Hover style */
+.select-css:hover {
+  border-color: #888;
+}
+
+/* Focus style */
+.select-css:focus {
+  border-color: #aaa;
+  /* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
+  -webkit-box-shadow: 0 0 1px 3px #FF910F;
+          box-shadow: 0 0 1px 3px #FF910F;
+  box-shadow: 0 0 0 3px -moz-mac-focusring;
+  color: #222;
+  outline: none;
+}
+
+/* Set options to normal weight */
+.select-css option {
+  font-weight: normal;
+}
+
+/* Support for rtl text, explicit support for Arabic and Hebrew */
+*[dir="rtl"] .select-css,
+:root:lang(ar) .select-css,
+:root:lang(iw) .select-css {
+  background-position: left .7em top 50%, 0 0;
+  padding: .6em .8em .5em 1.4em;
+}
+
+/* Disabled styles */
+.select-css:disabled,
+.select-css[aria-disabled=true] {
+  color: graytext;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#e5e5e5));
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22graytext%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E"), linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
+}
+
+.select-css:disabled:hover,
+.select-css[aria-disabled=true] {
+  border-color: #aaa;
+}
+
+.box {
+  position: relative;
+  padding: 3em;
+  background: #fff;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 1ex;
+}
+
+/* common */
+.ribbon {
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.ribbon::before, .ribbon::after {
+  position: absolute;
+  z-index: -1;
+  content: '';
+  display: block;
+  border: 5px solid #db7700;
+}
+
+.ribbon span {
+  position: absolute;
+  display: block;
+  width: 225px;
+  padding: 15px 0;
+  background-color: #FF910F;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+          box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  color: #fff;
+  font: 700 18px/1 'Lato', sans-serif;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  text-transform: uppercase;
+  text-align: center;
+}
+
+/* top right*/
+.ribbon-top-right {
+  top: -10px;
+  right: -10px;
+}
+
+.ribbon-top-right::before, .ribbon-top-right::after {
+  border-top-color: transparent;
+  border-right-color: transparent;
+}
+
+.ribbon-top-right::before {
+  top: 0;
+  left: 0;
+}
+
+.ribbon-top-right::after {
+  bottom: 0;
+  right: 0;
+}
+
+.ribbon-top-right span {
+  left: -25px;
+  top: 30px;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+footer {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 2em;
+  padding-bottom: 7em;
+}
+
+footer a {
+  text-align: center;
+}
+
+footer a img {
+  -webkit-filter: saturate(0%);
+          filter: saturate(0%);
+  height: 100px;
+  width: auto;
+}
+
+footer a:hover img {
+  -webkit-filter: saturate(100%);
+          filter: saturate(100%);
+}
+
+@media only screen and (max-width: 700px) {
+  header {
+    margin: 1.5em;
+  }
+  header h1 {
+    font-size: 3em;
+  }
+  header h2 {
+    font-size: 1.4em;
+  }
+  header p {
+    font-size: .7em;
+  }
+  .cover {
+    padding: 1ex 5ex;
+  }
+  select {
+    width: 100%;
+    font-size: 16px;
+  }
+  main h3 {
+    font-size: 1.5em;
+  }
+  main .cols {
+    display: block;
+  }
+  main .cols p {
+    font-size: 1.1em;
+  }
+  main .cols img {
+    text-align: center;
+    margin: 0 auto;
+    padding: 3em;
+  }
+  main .ilust {
+    padding: 1em !important;
+  }
+  footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  footer img {
+    margin: 2em 0;
+  }
+}
+/*# sourceMappingURL=style.css.map */
