--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@ ExE Expertos por Experiencia
 
 */
 
-$col-1: #FF910F;
+$col: #FF910F;
 $m: 3em;
 $shadow: 0 0 5px rgba(0, 0, 0, .1);
 * {
@@ -25,7 +25,7 @@ img {
 }
 
 em {
-    color: $col-1;
+    color: $col;
     font-style: italic;
     font-weight: 700;
 }
@@ -36,7 +36,7 @@ header {
 
     h1 {
         font-size: 3.8em;
-        color: $col-1;
+        color: $col;
         font-weight: 600;
     }
 
@@ -62,7 +62,7 @@ header {
                 top: .3ex;
                 margin: 0;
                 content: "·";
-                color: $col-1;
+                color: $col;
                 font-size: 1.9em;
                 padding: 0.6ex 0.6ex 0.4ex 0.4ex;
                 line-height: 20%;
@@ -119,7 +119,7 @@ main {
         margin-top: 2em;
         display: inline-block;
         border-radius: 1ex;
-        background-color: lighten($col-1, 39%);
+        background-color: lighten($col, 39%);
         box-shadow: $shadow;
         li {
             list-style-type: none;
@@ -169,7 +169,7 @@ select {
 .select-css:focus {
     border-color: #aaa;
     /* It'd be nice to use -webkit-focus-ring-color here but it doesn't work on box-shadow */
-    box-shadow: 0 0 1px 3px $col-1;
+    box-shadow: 0 0 1px 3px $col;
     box-shadow: 0 0 0 3px -moz-mac-focusring;
     color: #222;
     outline: none;
@@ -224,7 +224,7 @@ select {
         z-index: -1;
         content: '';
         display: block;
-        border: 5px solid darken($col-1, 10%);
+        border: 5px solid darken($col, 10%);
     }
 
     span {
@@ -232,7 +232,7 @@ select {
         display: block;
         width: 225px;
         padding: 15px 0;
-        background-color: $col-1;
+        background-color: $col;
         box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
         color: #fff;
         font: 700 18px/1 'Lato', sans-serif;
