--- a/style.css
+++ b/style.css
@@ -39,6 +39,20 @@ header h1 {
   font-weight: 600;
 }
 
+header h1::before {
+  display: block;
+  text-align: center;
+  content: "www.expertosporexperiencia.cl";
+  color: lightgrey;
+  font-size: 1rem;
+}
+
+header img {
+  width: 3rem;
+  height: auto;
+  margin: 1em 0 .6em 0;
+}
+
 header h2 {
   font-size: 2em;
   font-weight: 400;
@@ -47,8 +61,13 @@ header h2 {
   margin: 1ex;
 }
 
+header p {
+  font-weight: bold;
+}
+
 header ul {
   margin: 0 3em;
+  widows: 3;
 }
 
 header ul li {
