--- a/style.scss
+++ b/style.scss
@@ -347,6 +347,10 @@ footer {
         h3 {
             font-size: 1.5em;
         }
+
+        p {
+            font-size: 1.1em;
+        }
         .cols {
             display: block;
 
