--- a/style.css
+++ b/style.css
@@ -342,6 +342,9 @@ footer a:hover img {
   main h3 {
     font-size: 1.5em;
   }
+  main p {
+    font-size: 1.1em;
+  }
   main .cols {
     display: block;
   }
