--- a/css.css
+++ b/css.css
@@ -15,6 +15,7 @@ ExE Expertos por Experiencia
 body {
   max-width: 1000px;
   margin: 0 auto;
+  padding-bottom: 2em;
 }
 
 img {
@@ -140,12 +141,14 @@ main ul.ficha {
   margin-top: 2em;
   display: inline-block;
   border-radius: 1ex;
-  background-color: #ffecd6;
+  background-color: #ffefdb;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 main ul.ficha li {
+  font-family: Lato;
+  font-weight: 400;
   list-style-type: none;
 }
 
@@ -300,7 +303,6 @@ footer {
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 2em;
-  padding-bottom: 7em;
 }
 
 footer a {
@@ -373,4 +375,34 @@ footer a:hover img {
     margin: 2em 0;
   }
 }
-/*# sourceMappingURL=style.css.map */
+
+nav.buy {
+  margin: 2em 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+nav.buy a {
+  font-family: Lato;
+  font-weight: 600;
+  font-size: 80%;
+  display: inline-block;
+  text-transform: uppercase;
+  text-decoration: none;
+  list-style-type: none;
+  padding: 1ex 1em;
+  color: black;
+  background-color: white;
+  border: 1px solid #dedede;
+  border-radius: .5ex;
+}
+
+nav.buy a:hover {
+  color: white;
+  background-color: black;
+}
+/*# sourceMappingURL=css.css.map */
