--- a/css.scss
+++ b/css.scss
@@ -5,8 +5,10 @@ ExE Expertos por Experiencia
 */
 
 $col: #FF910F;
+$col-dark: rgb(97, 97, 97);
 $m: 3em;
 $shadow: 0 0 5px rgba(0, 0, 0, .1);
+
 * {
     margin: 0;
     padding: 0;
@@ -17,6 +19,7 @@ $shadow: 0 0 5px rgba(0, 0, 0, .1);
 body{
     max-width: 1000px;
     margin: 0 auto;
+    padding-bottom: 2em;
 }
 
 img {
@@ -131,16 +134,18 @@ main {
         }
     }
 
-    ul.ficha {
+    ul.ficha {      
         font-size: 1.2em;
         line-height: 140%;
         padding: 2em;
         margin-top: 2em;
         display: inline-block;
         border-radius: 1ex;
-        background-color: lighten($col, 39%);
+        background-color: lighten($col, 40%);
         box-shadow: $shadow;
         li {
+            font-family: Lato;
+            font-weight: 400;
             list-style-type: none;
         }
     }
@@ -288,15 +293,12 @@ select {
         top: 30px;
         transform: rotate(45deg);
     }
-
 }
 
 footer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-column-gap: 2em;
-    padding-bottom: 7em;
-
     a {
         text-align: center;
 
@@ -374,10 +376,34 @@ footer {
         display: flex;
         width: 100%;
         flex-direction: column;
-
         img {
             margin: 2em 0;
         }
     }
 
+}
+
+nav.buy{
+    margin: 2em 0;
+    display: flex;
+    justify-content: space-between;
+
+    a{
+        font-family: Lato;
+        font-weight: 600;
+        font-size: 80%;
+        display: inline-block;
+        text-transform: uppercase;
+        text-decoration: none;
+        list-style-type: none;
+        padding: 1ex 1em;
+        color: darken($col-dark, 70%);
+        background-color: white;
+        border: 1px solid #dedede;
+        border-radius: .5ex;
+        &:hover{
+            color: white;
+            background-color: darken($col-dark, 40%);
+        }
+    }
 }
